--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="search">Search</string>
     <string name="retry">Retry</string>
     <string name="category_image">Category Image</string>
+    <string name="favorite">Favorite</string>
+    <string name="unfavorite">Unfavorite</string>
+    <string name="add_to_cart">ADD TO CART</string>
 </resources>
