--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="expiry_date">Expiry Date</string>
     <string name="cvc">CVC</string>
     <string name="use_this_card">USE THIS CARD</string>
+    <string name="save_this_card">SAVE THIS CARD</string>
 </resources>
